after optimization and compress

--- a/index.html
+++ b/index.html
@@ -1,1 +1,201 @@
-<h3>My Application</h3>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta name="viewport" content="width=devide-width, initial-scale=1, maximum-scale=1 user-scalable=no">
+		<title>MyApplication</title>
+
+		<link rel="stylesheet" href="resources/css/app.css" />
+		
+
+	</head>
+
+	<body>
+
+		<h3>Hello Puteri</h3>
+		<h4>yuhuuuuuuuuu</h4>
+		<h2>yabedabeduuuuu</h2>
+
+
+<button type="button" class="btn btn-primary">
+<span class="glyphicon glyphicon-pencil"></span> Butang
+</button>
+		<div class="row">
+
+			<div class="col-md-6">
+
+				<table class="table table-striped table-bordered table-hover" >
+					<thead>
+						<tr>
+							<td>Bil</td>
+							<td>Nama</td>
+							<td>No Kad Pengenalan</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Puteri Noorlili Bahrun</td>
+							<td>781124145602</td>
+							<td><span class="glyphicon glyphicon-folder-open" style="color: #11AEAC"></span></td>
+						</tr>
+
+						<tr>
+							<td>2</td>
+							<td>Siti Zubaidah Ibrahim</td>
+							<td>781223145202</td>
+							<td><span class="glyphicon glyphicon-folder-open" style="color: #0000FF"></span></td>
+						</tr>
+
+						<tr>
+							<td>3</td>
+							<td>Fariza Firdaus</td>
+							<td>770717145202</td>
+							<td><span class="glyphicon glyphicon-folder-open"></span></td>
+						</tr>
+
+						<tr>
+							<td>4</td>
+							<td>Mohd Afiq Abu Bakar</td>
+							<td>801223145202</td>
+							<td><span class="glyphicon glyphicon-folder-open"></span></td>
+						</tr>
+					</tbody>
+
+				</table>
+
+			</div>
+
+			<div class="col-md-6">
+
+				<table class="table table-striped table-bordered table-hover" >
+					<thead>
+						<tr>
+							<td>Bil</td>
+							<td>Nama</td>
+							<td>No Kad Pengenalan</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Puteri Noorlili Bahrun</td>
+							<td>781124145602</td>
+						</tr>
+
+						<tr>
+							<td>2</td>
+							<td>Siti Zubaidah Ibrahim</td>
+							<td>781223145202</td>
+						</tr>
+
+						<tr>
+							<td>3</td>
+							<td>Fariza Firdaus</td>
+							<td>770717145202</td>
+						</tr>
+
+						<tr>
+							<td>4</td>
+							<td>Mohd Afiq Abu Bakar</td>
+							<td>801223145202</td>
+						</tr>
+					</tbody>
+
+				</table>
+
+			</div>
+
+		</div>
+
+<div class="row">
+
+			<div class="col-md-6">
+
+				<table class="table table-striped table-bordered table-hover" >
+					<thead>
+						<tr>
+							<td>Bil</td>
+							<td>Nama</td>
+							<td>No Kad Pengenalan</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Puteri Noorlili Bahrun</td>
+							<td>781124145602</td>
+							<td><span class="glyphicon glyphicon-folder-open"></span></td>
+						</tr>
+
+						<tr>
+							<td>2</td>
+							<td>Siti Zubaidah Ibrahim</td>
+							<td>781223145202</td>
+						</tr>
+
+						<tr>
+							<td>3</td>
+							<td>Fariza Firdaus</td>
+							<td>770717145202</td>
+						</tr>
+
+						<tr>
+							<td>4</td>
+							<td>Mohd Afiq Abu Bakar</td>
+							<td>801223145202</td>
+						</tr>
+					</tbody>
+
+				</table>
+
+			</div>
+
+			<div class="col-md-6">
+
+				<table class="table table-striped table-bordered table-hover" >
+					<thead>
+						<tr>
+							<td>Bil</td>
+							<td>Nama</td>
+							<td>No Kad Pengenalan</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Puteri Noorlili Bahrun</td>
+							<td>781124145602</td>
+						</tr>
+
+						<tr>
+							<td>2</td>
+							<td>Siti Zubaidah Ibrahim</td>
+							<td>781223145202</td>
+						</tr>
+
+						<tr>
+							<td>3</td>
+							<td>Fariza Firdaus</td>
+							<td>770717145202</td>
+						</tr>
+
+						<tr>
+							<td>4</td>
+							<td>Mohd Afiq Abu Bakar</td>
+							<td>801223145202</td>
+						</tr>
+					</tbody>
+
+				</table>
+
+			</div>
+
+		</div>
+
+		
+		<script src="bower_components/jquery/dist/jquery.js" type="application/javascript"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+	</body>
+
+</html>
